--- a/certificat.html
+++ b/certificat.html
@@ -18,7 +18,7 @@
         /* Styling the red area where the text should go */
         .text-container {
             width: 80%; /* Adjust as needed */
-            margin: 20px auto;
+            margin: 50px auto; /* Creates more separation between menu and text */
             padding: 20px;
             border: 2px solid red; /* Simulating the red rectangle */
             color: white;
@@ -32,7 +32,7 @@
         }
         
         .navbar {
-            margin-bottom: 20px;
+            margin-bottom: 20px; /* Added margin-bottom to separate from text */
         }
     </style>
 </head>
