--- a/certificat.html
+++ b/certificat.html
@@ -13,6 +13,24 @@
             text-decoration: none;
             cursor: default;
         }
+        .certifications {
+            margin: 20px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .certifications h2 {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        .certifications ul {
+            list-style: none;
+            padding: 0;
+        }
+        .certifications li {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -43,5 +61,20 @@
             </ul>
         </nav>
     </header>
+
+    <section class="certifications">
+        <h2>Certifications</h2>
+        <ul>
+            <li>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</li>
+            <li>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</li>
+            <li>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</li>
+            <li>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</li>
+            <li>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</li>
+            <li>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</li>
+            <li>Date de délivrance : janv. 2023 – Vade for M365 Administration</li>
+            <li>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</li>
+        </ul>
+    </section>
+
 </body>
 </html>
