--- a/certificat.html
+++ b/certificat.html
@@ -13,6 +13,12 @@
             text-decoration: none;
             cursor: default;
         }
+        #certifications {
+            margin-top: auto; /* Pousse la section vers le bas de la page */
+            padding: 20px;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
