--- a/certificat.html
+++ b/certificat.html
@@ -18,6 +18,13 @@
             padding: 20px;
             text-align: center;
         }
+#certifications ul {
+    list-style-type: none; /* Retire les points de la liste */
+    padding: 0;
+}
+#certifications li {
+    padding: 5px 0; /* Ajoute un espacement entre les éléments de la liste */
+}
     </style>
 </head>
 <body>
