--- a/certificat.html
+++ b/certificat.html
@@ -55,18 +55,50 @@
             </ul>
         </nav>
     </header>
-    <section id="certifications">
-    <h2>Certifications</h2>
-    <ul>
-        <li>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</li>
-        <li>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</li>
-        <li>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</li>
-        <li>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</li>
-        <li>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</li>
-        <li>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</li>
-        <li>Date de délivrance : janv. 2023 – Vade for M365 Administration</li>
-        <li>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</li>
-    </ul>
-</section>
+ <section id="certifications">
+        <h2>Certifications</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Date de délivrance</th>
+                    <th>Certificat</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>janv. 2023</td>
+                    <td>SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</td>
+                </tr>
+                <tr>
+                    <td>janv. 2023</td>
+                    <td>TEHTRIS DATA SCIENCE</td>
+                </tr>
+                <tr>
+                    <td>janv. 2023</td>
+                    <td>TEHTRIS SOARTEHTRIS</td>
+                </tr>
+                <tr>
+                    <td>sept. 2022</td>
+                    <td>TEHTRIS XDR Niveau 1</td>
+                </tr>
+                <tr>
+                    <td>sept. 2022</td>
+                    <td>TEHTRIS UES Niveau 2</td>
+                </tr>
+                <tr>
+                    <td>janv. 2023</td>
+                    <td>Vade Secure Cloud Administration</td>
+                </tr>
+                <tr>
+                    <td>janv. 2023</td>
+                    <td>Vade for M365 Administration</td>
+                </tr>
+                <tr>
+                    <td>juil. 2020</td>
+                    <td>Loi de Programmation militaire – Formation SSI/LPM</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
 </body>
 </html>
