--- a/certificat.html
+++ b/certificat.html
@@ -18,12 +18,30 @@
             padding: 20px;
             text-align: center;
         }
-#certifications ul {
-    list-style-type: none; /* Retire les points de la liste */
-    padding: 0;
+#certifications {
+    margin-top: auto; /* Pousse la section vers le bas de la page */
+    padding: 20px;
+    text-align: center;
 }
-#certifications li {
-    padding: 5px 0; /* Ajoute un espacement entre les éléments de la liste */
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px auto;
+}
+
+th, td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #e0e0e0;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
 }
     </style>
 </head>
