--- a/certificat.html
+++ b/certificat.html
@@ -29,10 +29,13 @@
             margin-bottom: 50px; /* Ajuste la hauteur par rapport au bas de la page */
         }
 
+        /* Styles du tableau */
         table {
             width: 80%; /* Limite la largeur du tableau */
             border-collapse: collapse;
             margin: 0 auto 20px; /* Centrage du tableau */
+            background-color: #f0f0f0; /* Fond gris clair */
+            color: black; /* Texte en noir */
         }
 
         th, td {
@@ -42,11 +45,11 @@
         }
 
         th {
-            background-color: #e0e0e0;
+            background-color: #d0d0d0; /* Fond gris plus foncé pour l'en-tête */
         }
 
         tbody tr:nth-child(even) {
-            background-color: #f9f9f9;
+            background-color: #e0e0e0; /* Gris légèrement différent pour les lignes paires */
         }
 
         /* Styles pour le menu */
