--- a/certificat.html
+++ b/certificat.html
@@ -25,17 +25,17 @@
         #certifications {
             padding: 20px;
             text-align: center;
-            margin-top: auto; /* Force la section à se rapprocher du bas */
-            margin-bottom: 50px; /* Ajuste la hauteur par rapport au bas de la page */
+            margin-top: auto;
+            margin-bottom: 50px;
         }
 
-        /* Styles du tableau */
+        /* Styles du tableau avec une couleur bleue-verte */
         table {
-            width: 80%; /* Limite la largeur du tableau */
+            width: 80%;
             border-collapse: collapse;
-            margin: 0 auto 20px; /* Centrage du tableau */
-            background-color: #f0f0f0; /* Fond gris clair */
-            color: black; /* Texte en noir */
+            margin: 0 auto 20px;
+            background-color: #009688; /* Bleu-vert pour le fond du tableau */
+            color: white; /* Texte en blanc pour un bon contraste */
         }
 
         th, td {
@@ -45,11 +45,11 @@
         }
 
         th {
-            background-color: #d0d0d0; /* Fond gris plus foncé pour l'en-tête */
+            background-color: #00796b; /* Couleur plus foncée pour l'en-tête */
         }
 
         tbody tr:nth-child(even) {
-            background-color: #e0e0e0; /* Gris légèrement différent pour les lignes paires */
+            background-color: #00897b; /* Teinte intermédiaire pour les lignes paires */
         }
 
         /* Styles pour le menu */
