--- a/certificat.html
+++ b/certificat.html
@@ -8,82 +8,15 @@
     <link rel="stylesheet" href="css/x-styles.css">
     <script src="js/script.js"></script>
     <style>
-        /* Style général pour que le body prenne toute la hauteur */
-        html, body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Flex container pour gérer la position du contenu */
-        body {
-            justify-content: flex-start;
-        }
-
-        /* Styles pour le tableau et la section */
-        #certifications {
-            padding: 20px;
-            text-align: center;
-            margin-top: auto;
-            margin-bottom: 50px;
-        }
-
-        /* Styles du tableau avec une couleur bleue-verte */
-        table {
-            width: 80%;
-            border-collapse: collapse;
-            margin: 0 auto 20px;
-            background-color: #009688; /* Bleu-vert pour le fond du tableau */
-            color: white; /* Texte en blanc pour un bon contraste */
-        }
-
-        th, td {
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #00796b; /* Couleur plus foncée pour l'en-tête */
-        }
-
-        tbody tr:nth-child(even) {
-            background-color: #00897b; /* Teinte intermédiaire pour les lignes paires */
-        }
-
-        /* Styles pour le menu */
-        .navbar {
-            margin-bottom: 0;
-            padding: 10px;
-            background-color: #333;
-        }
-
-        .navbar ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .navbar ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        .navbar ul li a {
-            color: white;
+        .nav-link-disabled {
+            color: inherit;
             text-decoration: none;
-        }
-
-        .navbar ul li a:hover {
-            text-decoration: underline;
+            cursor: default;
         }
     </style>
 </head>
 <body>
-
-    <!-- Section du menu en haut de la page -->
-    <header>
-        <div class="light"></div>
+    <header>        <div class="light"></div>
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
@@ -109,54 +42,5 @@
             </ul>
         </nav>
     </header>
-
-    <!-- Contenu principal -->
-    <main>
-        <section id="certifications">
-            <h2>Certifications</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Date de délivrance</th>
-                        <th>Certificat</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>janv. 2023</td>
-                        <td>SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</td>
-                    </tr>
-                    <tr>
-                        <td>janv. 2023</td>
-                        <td>TEHTRIS DATA SCIENCE</td>
-                    </tr>
-                    <tr>
-                        <td>janv. 2023</td>
-                        <td>TEHTRIS SOAR</td>
-                    </tr>
-                    <tr>
-                        <td>sept. 2022</td>
-                        <td>TEHTRIS XDR Niveau 1</td>
-                    </tr>
-                    <tr>
-                        <td>sept. 2022</td>
-                        <td>TEHTRIS UES Niveau 2</td>
-                    </tr>
-                    <tr>
-                        <td>janv. 2023</td>
-                        <td>Vade Secure Cloud Administration</td>
-                    </tr>
-                    <tr>
-                        <td>janv. 2023</td>
-                        <td>Vade for M365 Administration</td>
-                    </tr>
-                    <tr>
-                        <td>juil. 2020</td>
-                        <td>Loi de Programmation militaire – Formation SSI/LPM</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </main>
 </body>
 </html>
