--- a/index.html
+++ b/index.html
@@ -8,99 +8,10 @@
     <link rel="stylesheet" href="css/x-styles.css">
     <script src="js/script.js"></script>
     <style>
-        /* Style de base pour le menu */
-        .navbar {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-list {
-            display: flex;
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .nav-item {
-            position: relative;
-            margin-right: 20px;
-        }
-
-        .nav-link {
+        .nav-link-disabled {
+            color: inherit;
             text-decoration: none;
-            color: #333;
-        }
-
-        /* Style du sous-menu */
-        .sub-menu {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 10px;
-            list-style: none;
-            margin: 0;
-            z-index: 10;
-        }
-
-        .nav-item:hover .sub-menu {
-            display: block;
-        }
-
-        /* Style pour mobile */
-        @media (max-width: 768px) {
-            .navbar {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .nav-list {
-                flex-direction: column;
-                width: 100%;
-            }
-
-            .nav-item {
-                margin-right: 0;
-                width: 100%;
-            }
-
-            /* Cacher le sous-menu par défaut sur mobile */
-            .sub-menu {
-                position: static;
-                width: 100%;
-                box-shadow: none;
-            }
-
-            .nav-item:hover .sub-menu,
-            .nav-item:focus-within .sub-menu {
-                display: block;
-            }
-
-            /* Style pour un bouton hamburger */
-            .hamburger {
-                display: none;
-                cursor: pointer;
-                font-size: 24px;
-            }
-
-            /* Afficher le bouton hamburger sur mobile */
-            @media (max-width: 768px) {
-                .hamburger {
-                    display: block;
-                    margin-right: 20px;
-                }
-
-                .nav-list {
-                    display: none;
-                }
-
-                .nav-list.active {
-                    display: flex;
-                    flex-direction: column;
-                }
-            }
+            cursor: default;
         }
     </style>
 </head>
@@ -108,7 +19,6 @@
     <header>
         <div class="light"></div>
         <nav class="navbar">
-            <div class="hamburger" onclick="toggleMenu()">☰</div> <!-- Bouton hamburger -->
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item">
@@ -133,12 +43,5 @@
             </ul>
         </nav>
     </header>
-
-    <script>
-        function toggleMenu() {
-            const navList = document.querySelector('.nav-list');
-            navList.classList.toggle('active');
-        }
-    </script>
 </body>
 </html>
