--- a/listing/Ultimate-RAT-Collection.html
+++ b/listing/Ultimate-RAT-Collection.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <style>
-/* Styles du conteneur */
 .futuristic-container {
     display: flex;
     justify-content: center;
@@ -13,14 +12,11 @@
     height: 100vh;
     background-color: #0a0a0a;
 }
-
-/* Styles de la liste */
 .futuristic-list {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-
 .futuristic-list li {
     font-size: 1.5rem;
     padding: 10px 20px;
@@ -32,23 +28,20 @@
     box-shadow: 0 0 15px rgba(0, 255, 204, 0.5), 0 0 25px rgba(0, 102, 255, 0.5);
     transition: transform 0.3s, box-shadow 0.3s;
 }
-
-/* Effet au survol */
 .futuristic-list li:hover {
     transform: scale(1.05);
     box-shadow: 0 0 30px rgba(0, 255, 204, 0.8), 0 0 45px rgba(0, 102, 255, 0.8);
 }
-
     </style>
     <title>Liste Futuriste</title>
 </head>
 <body>
     <div class="futuristic-container">
         <ul class="futuristic-list">
-            <li>Élément 1</li>
-            <li>Élément 2</li>
-            <li>Élément 3</li>
-            <li>Élément 4</li>
+            <li>0nly1Rat</li>
+            <li>888Rat</li>
+            <li>A311Death</li>
+            <li>A32sRat</li>
         </ul>
     </div>
 </body>
