--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
             </ul>
         </nav>
     </header>
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
 </body>
 </html>
