--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             text-decoration: none;
             cursor: default;
         }
+         footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #f1f1f1;
+            font-size: 0.9em;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
