--- a/index.html
+++ b/index.html
@@ -14,19 +14,14 @@
             display: flex;
             flex-direction: column;
         }
-
-        /* Le contenu principal doit remplir tout l'espace restant */
         body {
             flex: 1;
         }
-
         .nav-link-disabled {
             color: inherit;
             text-decoration: none;
             cursor: default;
         }
-
-        /* Style du pied de page */
         footer {
             text-align: center;
             padding: 10px;
@@ -36,8 +31,6 @@
             bottom: 0;
             width: 100%;
         }
-
-        /* Permet au contenu de la page de s'étendre */
         .content {
             flex: 1;
         }
@@ -71,6 +64,11 @@
             </ul>
         </nav>
     </header>
+
+    <div class="content">
+
+    </div>
+
     <footer>
         &copy; 2024 Darconex. Tous droits réservés.
     </footer>
