--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #f1f1f1;
+            background-color: #918e8e;
             font-size: 0.9em;
             position: relative;
             bottom: 0;
@@ -64,11 +64,8 @@
             </ul>
         </nav>
     </header>
-
     <div class="content">
-
     </div>
-
     <footer>
         &copy; 2024 Darconex. Tous droits réservés.
     </footer>
