--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #918e8e;
+            background-color: #403f3f;
             font-size: 0.9em;
             position: relative;
             bottom: 0;
