--- a/certificat.html
+++ b/certificat.html
@@ -8,15 +8,37 @@
     <link rel="stylesheet" href="css/x-styles.css">
     <script src="js/script.js"></script>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        body {
+            flex: 1;
+        }
         .nav-link-disabled {
             color: inherit;
             text-decoration: none;
             cursor: default;
         }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #403f3f;
+            font-size: 0.9em;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        .content {
+            flex: 1;
+        }
     </style>
 </head>
 <body>
-    <header>        <div class="light"></div>
+    <header>
+        <div class="light"></div>
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
@@ -42,5 +64,10 @@
             </ul>
         </nav>
     </header>
+    <div class="content">
+    </div>
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
 </body>
 </html>
