--- a/groups/cyber/index.html
+++ b/groups/cyber/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -34,6 +33,16 @@
         flex-grow: 1;
         text-align: center;
       }
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: #403f3f;
+        color: white;
+        font-size: 0.9em;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+      }
     </style>
   </head>
   <body>
@@ -50,5 +59,10 @@
       CTI (Cyber Threat Intelligence)<br>
       TH (Threat Hunting)</p>
     </div>
+    
+    <!-- Footer with signature -->
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
   </body>
 </html>
