--- a/groups/team/index.html
+++ b/groups/team/index.html
@@ -33,19 +33,36 @@
         flex-grow: 1;
         text-align: center;
       }
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: #403f3f;
+        color: white;
+        font-size: 0.9em;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+      }
     </style>
   </head>
   <body>
     <div id="body">
       <div id="header">
         <a href="https://darconex.github.io/" class="button-link">Menu</a>
-        <div>BlueTeam / RedTeam</div>
+        <div>CYBER</div>
         <hr/>
       </div>
     </div>
     <script src="js/arf.js"></script>
     <div class="legend">
+      <p>OSINT (OpenSourceINTelligence)<br>
+      CTI (Cyber Threat Intelligence)<br>
+      TH (Threat Hunting)</p>
     </div>
-    </div>
+    
+    <!-- Footer with signature -->
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
   </body>
 </html>
