--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Darconex</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/x-styles.css">
+    <link rel="icon" href="https://github.com/Darconex/darconex.github.io/blob/main/img/logo.png" title="logo">
     <script src="js/script.js"></script>
     <style>
         html, body {
