--- a/charte.html
+++ b/charte.html
@@ -6,6 +6,7 @@
     <title>Darconex</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/x-styles.css">
+    <link rel="icon" href="img/logo.png" title="logo">
     <script src="js/script.js"></script>
     <style>
         html, body {
