--- a/charte.html
+++ b/charte.html
@@ -67,14 +67,14 @@
     </header>
     <div class="content">
         <h2>Charte de Non-Clause</h2>
-        <p>Respecter les lois et réglementations en vigueur en matière de cybersécurité et de protection des données.</p>
-        <p>Ne pas s’engager dans des activités de piratage informatique, de vol de données, de déni de service ou d’autres actions malveillantes visant à compromettre la sécurité informatique d’autrui.</p>
-        <p>Protéger les actifs numériques et les données confidentielles de l’entreprise.</p>
-        <p>Signaler toute faille de sécurité, tout incident ou toute activité suspecte à l’équipe de sécurité informatique de l’entreprise.</p>
-        <p>Participer à des programmes de sensibilisation à la sécurité informatique et à la formation continue pour rester informé des meilleures pratiques en matière de cybersécurité.</p>
+        <p>&Omicron; Respecter les lois et réglementations en vigueur en matière de cybersécurité et de protection des données.</p>
+        <p>&Omicron; Ne pas s’engager dans des activités de piratage informatique, de vol de données, de déni de service ou d’autres actions malveillantes visant à compromettre la sécurité informatique d’autrui.</p>
+        <p>&Omicron; Protéger les actifs numériques et les données confidentielles de l’entreprise.</p>
+        <p>&Omicron; Signaler toute faille de sécurité, tout incident ou toute activité suspecte à l’équipe de sécurité informatique de l’entreprise.</p>
+        <p>&Omicron; Participer à des programmes de sensibilisation à la sécurité informatique et à la formation continue pour rester informé des meilleures pratiques en matière de cybersécurité.</p>
 
         <h3>Conséquences de la violation</h3>
-        <p>En cas de violation de cette Charte, les parties signataires reconnaissent que des mesures disciplinaires appropriées seront prises conformément aux politiques internes de l’entreprise. De plus, les parties peuvent être passibles de poursuites judiciaires en cas de violation des lois en vigueur.</p>
+        <p>&Omicron; En cas de violation de cette Charte, les parties signataires reconnaissent que des mesures disciplinaires appropriées seront prises conformément aux politiques internes de l’entreprise. De plus, les parties peuvent être passibles de poursuites judiciaires en cas de violation des lois en vigueur.</p>
     </div>
     <footer>
         &copy; 2024 Darconex. Tous droits réservés.
