--- a/charte.html
+++ b/charte.html
@@ -80,7 +80,7 @@
         <p>&loz; Ne pas s’engager dans des activités de piratage informatique, de vol de données, de déni de service ou d’autres actions malveillantes visant à compromettre la sécurité informatique d’autrui.</p>
         <p>&loz; Protéger les actifs numériques et les données confidentielles de l’entreprise.</p>
         <p>&loz; Signaler toute faille de sécurité, tout incident ou toute activité suspecte à l’équipe de sécurité informatique de l’entreprise.</p>
-        <p>Participer à des programmes de sensibilisation à la sécurité informatique et à la formation continue pour rester informé des meilleures pratiques en matière de cybersécurité.</p>
+        <p>&loz; Participer à des programmes de sensibilisation à la sécurité informatique et à la formation continue pour rester informé des meilleures pratiques en matière de cybersécurité.</p>
 
         <h3>Conséquences de la violation</h3>
         <p>&loz;	En cas de violation de cette Charte, les parties signataires reconnaissent que des mesures disciplinaires appropriées seront prises conformément aux politiques internes de l’entreprise. De plus, les parties peuvent être passibles de poursuites judiciaires en cas de violation des lois en vigueur.</p>
