--- a/certificat.html
+++ b/certificat.html
@@ -32,8 +32,18 @@
             bottom: 0;
             width: 100%;
         }
-        .content {
-            flex: 1;
+            .content {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        height: 100%;
+    }
+
+    .certificates {
+        max-width: 600px; /* Facultatif, pour limiter la largeur du texte */
+    }
         }
     </style>
 </head>
@@ -65,6 +75,18 @@
             </ul>
         </nav>
     </header>
+    <div class="content">
+    <div class="certificates">
+        <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</p>
+        <p>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</p>
+        <p>Date de délivrance : janv. 2023 – Vade for M365 Administration</p>
+        <p>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</p>
+    </div>
+</div>
     <div class="content">
     </div>
     <footer>
