--- a/certificat.html
+++ b/certificat.html
@@ -77,14 +77,14 @@
     </header>
     <div class="content">
     <div class="certificates">
-        <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
-        <p>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</p>
-        <p>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</p>
-        <p>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</p>
-        <p>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</p>
-        <p>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</p>
-        <p>Date de délivrance : janv. 2023 – Vade for M365 Administration</p>
-        <p>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</p>
+        <p>&loz; Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information &loz; </p>
+        <p>&loz; Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE &loz;</p>
+        <p>&loz; Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS &loz;</p>
+        <p>&loz; Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1 &loz;</p>
+        <p>&loz; Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2 &loz;</p>
+        <p>&loz; Date de délivrance : janv. 2023 – Vade Secure Cloud Administration &loz;</p>
+        <p>&loz; Date de délivrance : janv. 2023 – Vade for M365 Administration &loz;</p>
+        <p>&loz; Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM &loz;</p>
     </div>
 </div>
     <div class="content">
