--- a/list/Ultimate-RAT-Collection.html
+++ b/list/Ultimate-RAT-Collection.html
@@ -34,7 +34,7 @@
     box-shadow: 0 0 30px rgba(0, 255, 204, 0.8), 0 0 45px rgba(0, 102, 255, 0.8);
 }
     </style>
-    <title>Liste Futuriste</title>
+    <title>Darconex</title>
 </head>
 <body>
     <div class="futuristic-container">
